# peach-web

./: .gitignore  .travis.yml  Cargo.toml  FEATURES.md  README.md  RESOURCES.md  Rocket.toml  notes  temp
.cargo/: config
config/network/: README.md  ap_down.sh  ap_up.sh  create-ap.service  createap.sh  dhcpcd.conf  dnsmasq.conf  hostapd.conf  interface_checker.sh  interfaces  wpa_supplicant.conf
debian/: peach-web.service  postinst  postrm  prerm
research/: pub_questions.md
src/: common.rs  context.rs  device.rs  error.rs  forms.rs  json_api.rs  lib.rs  main.rs  monitor.rs  network.rs  network_client.rs  oled.rs  oled_client.rs  routes.rs  stats.rs  stats_client.rs  structs.rs  tests.rs  utils.rs  ws.rs
static/: index.html
static/css/: _variables.css  peach_ui.css  peachcloud.css  tachyons.min.css
static/images/: placeholder.txt
static/js/: add_admin.js  change_password.js  common.js  configure_dns.js  forms.js  network.js  network_add.js  network_card.js  network_detail.js  network_modify.js  network_usage.js  reset_password.js  shutdown_menu.js  status.js  websockets.js
static/templates/: base.html.tera  connect_wifi_form.html.tera  device.html.tera  home.html.tera  index.html.tera  index.html.tera.bak  nav.html.tera  network_add.html.tera  network_card.html.tera  network_detail.html.tera  network_list.html.tera  network_modify.html.tera  not_found.html.tera  shutdown.html.tera
templates/: base.html.tera  configure_dns.tera  device.html.tera  help.html.tera  index.html.tera  internal_error.html.tera  login.html.tera  messages.html.tera  nav.html.tera  network_add.html.tera  network_card.html.tera  network_detail.html.tera  network_list.html.tera  network_modify.html.tera  network_usage.html.tera  not_found.html.tera  peers.html.tera  profile.html.tera  shutdown.html.tera
templates/admin/: add_admin.html.tera  configure_admin.html.tera
templates/password/: change_password.html.tera  reset_password.html.tera  send_password_reset.html.tera
templates/snippets/: flash_message.tera  noscript.tera
