[package]
name = "peach-web"
version = "0.1.0"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
get_if_addrs = "0.5"
jsonrpc-client-core = "0.5"
jsonrpc-client-http = "0.5"
log = "0.4"
rocket = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
snafu = "0.4"
tera = "0.11"
websocket = "0.21"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "tera_templates"]
