[package]
name = "peach-web"
version = "0.3.0"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"
description = "peach-web is a web application which provides a web interface for monitoring and interacting with the PeachCloud device. This allows administration of the single-board computer (ie. Raspberry Pi) running PeachCloud, as well as the ssb-server and related plugins."
homepage = "https://opencollective.com/peachcloud"
repository = "https://github.com/peachcloud/peach-web"
readme = "README.md"
license = "AGPL-3.0-only"
publish = false

[package.metadata.deb]
depends = "$auto"
extended-description = """\
peach-web is a web application which provides a web interface for monitoring \
and interacting with the PeachCloud device. This allows administration of \
the single-board computer (ie. Raspberry Pi) running PeachCloud, as well as \
the ssb-server and related plugins."""
maintainer-scripts="debian"
assets = [
    ["target/release/peach-web", "/usr/bin/", "755"],
    ["templates", "/usr/share/peach-web/", "644"],
    ["static", "/usr/share/peach-web", "644"],
    ["debian/peach-web.service", "/lib/systemd/system/peach-web.service", "644"],
    ["README.md", "/usr/share/doc/peach-web/README", "644"],
]

[badges]
travis-ci = { repository = "peachcloud/peach-web", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
env_logger = "0.6"
get_if_addrs = "0.5"
jsonrpc-client-core = "0.5"
jsonrpc-client-http = "0.5"
log = "0.4"
percent-encoding = "2.1.0"
rocket = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
snafu = "0.4"
tera = "1.2"
websocket = "0.21"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "tera_templates"]
