[package]
name = "peach-web"
version = "0.4.1"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"
description = "peach-web is a web application which provides a web interface for monitoring and interacting with the PeachCloud device. This allows administration of the single-board computer (ie. Raspberry Pi) running PeachCloud, as well as the ssb-server and related plugins."
homepage = "https://opencollective.com/peachcloud"
repository = "https://github.com/peachcloud/peach-web"
readme = "README.md"
license = "AGPL-3.0-only"
publish = false

[package.metadata.deb]
depends = "$auto"
extended-description = """\
peach-web is a web application which provides a web interface for monitoring \
and interacting with the PeachCloud device. This allows administration of \
the single-board computer (ie. Raspberry Pi) running PeachCloud, as well as \
the ssb-server and related plugins."""
maintainer-scripts="debian"
assets = [
    ["target/release/peach-web", "/usr/bin/", "755"],
    ["templates/*", "/usr/share/peach-web/templates/", "644"],
    ["static/*", "/usr/share/peach-web/static/", "644"],
    ["static/css/*", "/usr/share/peach-web/static/css/", "644"],
    ["static/icons/*", "/usr/share/peach-web/static/icons/", "644"],
    ["static/images/*", "/usr/share/peach-web/static/images/", "644"],
    ["static/js/*", "/usr/share/peach-web/static/js/", "644"],
    ["debian/peach-web.service", "/lib/systemd/system/peach-web.service", "644"],
    ["README.md", "/usr/share/doc/peach-web/README", "644"],
]

[badges]
travis-ci = { repository = "peachcloud/peach-web", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
env_logger = "0.8"
jsonrpc-client-core = "0.5"
jsonrpc-client-http = "0.5"
log = "0.4"
nest = "1.0.0"
peach-lib = { git = "https://github.com/peachcloud/peach-lib", branch = "main" }
percent-encoding = "2.1.0"
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.6"
tera = "1.5"
websocket = "0.26"
xdg = "2.2.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "tera_templates"]
